Added mentioning of OpenCL version used during compilation ("conforming to OpenCL standard ...") to the output of -V option.
Fixed typo in ocl/Makefile (error test was commented out since r1117).

Slightly changed #error pragmas throughout the code. Error messages are now enclosed in quotes.

--- a/src/ocl/Makefile
+++ b/src/ocl/Makefile
@@ -39,7 +39,7 @@ CSOURCE   += oclcore.c
 ifeq ($(filter NO_CPP,$(OPTIONS)),)
   CPPSOURCE += fft_execute.cpp fft_setup.cpp fft_kernelstring.cpp
 else
-  #$(error OpenCL version relies on C++ sources, hence it is incompatible with NO_CPP)
+  $(error OpenCL version relies on C++ sources, hence it is incompatible with NO_CPP)
 endif
 
 ifneq ($(filter OCL_READ_SOURCE_RUNTIME,$(OPTIONS)),)
