Added a couple of flags to makefiles to fully enable compilation in 32-bit mode on 64-bit OS, using 'EXTRA_FLAGS=-m32'. It was tested on 64-bit Windows 7, set up according to http://code.google.com/p/a-dda/wiki/InstallingMinGW#Multilib_configuration_on_Windows
Also added removing of *.d.* files (produced when build is aborted) to clean commands.

--- a/src/ocl/Makefile
+++ b/src/ocl/Makefile
@@ -55,6 +55,12 @@ else
   CLSOURCE := oclkernels.cl
 endif
 
+# This fix is to disable linker warnings when linking against 32-bit OpenCL.dll on 64-bit Windows.
+# The issue appeared with Nvidia library supplied with driver 301.42
+ifneq ($(filter -m32,$(LDFLAGS)),)
+  LDFLAGS += -Wl,--enable-stdcall-fixup
+endif
+
 # This is a weird prefix, which is required since that is how .clstr files are quoted in .d files
 CLSPREFIX  := ../$(OCL)/
 CLSTRING   := $(CLSOURCE:.cl=.clstr)
